--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,13 @@ doc/dokumentace\.pdf
 *.toc
 
 dokumentace\.pdf
+
+doc/prezentacia\.log
+
+doc/prezentacia\.nav
+
+doc/prezentacia\.snm
+
+doc/xholub40\.pdf
+
+doc/prezentacia\.pdf
